fix initial not showing on high score list error

--- a/css/style.css
+++ b/css/style.css
@@ -170,6 +170,7 @@ p,input {
   }
 
   /* .highscore-list {
-    display: inline;
+    display: inline-block;
+    vertical-align: middle;
   } */
 
